--- a/javadoc-package.html
+++ b/javadoc-package.html
@@ -12,6 +12,8 @@
 
     You should have received a copy of the file "LICENSE", containing
     the License John Weiss originally placed this program under.
+
+    $Id: BSP_Node.java 2711 2013-02-26 02:55:57Z candide $
   -->
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
