- Whitespace changes. - Fixed bogus copyright dates.
git-svn-id: file:///home/candide/src/0_Local_SVN_Repos/templates/trunk@2860 92e5ae4a-8afd-0310-8b33-eaebc6dd6768

--- a/javadoc-package.html
+++ b/javadoc-package.html
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC
+          "-//W3C//DTD XHTML 1.0 Strict//EN"
+          "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <!--
-    Copyright (C) 2012-2013 by John Weiss
+    Copyright (C) 2013 by John Weiss
     This program is free software; you can redistribute it and/or modify
     it under the terms of the Artistic License, included as the file
     "LICENSE" in the source code archive.
@@ -33,11 +35,10 @@
       You can add {@link MemberClass} links.
     </p>
 
-    @since date-goes-here
     @see MemberClass
 
-    <!-- These next 2 are currently ignored.  Just leave them here, anyhow. -->
-    @author John Weiss
+    @since date-goes-here
     @version 1.0
+    @author John Weiss
   </body>
 </html>
